# educad

./: .gitignore  CMakeLists.txt  Makefile  README.md  angem.cpp  angem.h  hash.cpp  hash.h  line.cpp  line.h  main.cpp  point.cpp  point.h  sfml-app  utility.cpp  utility.h  vec2.cpp  vec3.h
.github/workflows/: ci.yml
Algo/: Algo.cpp  Algo.h  Algo.hpp  CMakeLists.txt
AlgoInterface/: AlgoInterface.h
Angem/: Angem.cpp  Angem.hpp  AngemEntity.h  CMakeLists.txt
AngemWorker/: AngemModelWorker.cpp  AngemModelWorker.hpp  CMakeLists.txt  LineWorker.cpp
Button/: AbstractButton.cpp  AbstractButton.hpp  PushButton.cpp  PushButton.hpp
Canvas/: CMakeLists.txt  canvas.cpp  canvas.h  canvasMoveMouse.cpp  canvasPaint.cpp  canvasPressMouse.cpp  contextedit.cpp  contextedit.h  projectstructurelist.cpp  projectstructurelist.h
Controller/: CMakeLists.txt  ControllerObservable.h  controller.cpp  controller.h
ControllerObservable/: ControllerObservable.h
Entity/: AngemModelWorker.h  AngemModelWorker.hpp  CMakeLists.txt  Entity.cpp  Entity.hpp  TwoDEntity.h  TwoDLine.cpp  TwoDPlane.cpp  TwoDPoint.cpp  line.cpp  plane.cpp  point.cpp  projection.cpp
Render/: Render.cpp  Render.hpp
RenderableEntity/: CMakeLists.txt  Renderable.cpp  Renderable.h  RenderableEntity.cpp  RenderableEntity.h
TwoDEntity/: CMakeLists.txt  TwoDEntity.h  TwoDLine.cpp  TwoDPoint.cpp
UI/: CMakeLists.txt  Descriptive.cpp  canvas.cpp  canvas.h  contextedit.cpp  contextedit.h  controller.cpp  controller.h  descriptive.h  educad.pro  educad.pro.user.96d95d3  guiobjects.cpp  guiobjects.h  guistorage.h  hintWindow.cpp  hintWindow.h  iguiobserver.cpp  iguiobserver.h  iguiobserver.h.autosave  iguipointobserver.h  main.cpp  mainwindow.cpp  mainwindow.h  projectstructurelist.cpp  projectstructurelist.h  toolbar.cpp  toolbar.h  unittest.cpp  unittest.h
UI/TwoDEntity/: TwoDEntity.h  TwoDLine.cpp  TwoDPoint.cpp
Utils/: CMakeLists.txt  Utils.cpp  Utils.hpp  polyset.cpp  polyset.h  utils.h
angem/: CMakeLists.txt  angem.cpp  angem.h
entity2d/: CMakeLists.txt  entity2d.cpp  entity2d.h
hash/: CMakeLists.txt  hash.h
include/: angem.h  utility.h
line/: CMakeLists.txt  line.cpp  line.h
line2d/: CMakeLists.txt  line2d.cpp  line2d.h
line2d_base/: CMakeLists.txt  line2d_base.cpp  line2d_base.h
point/: CMakeLists.txt  point.h
point2d/: CMakeLists.txt  point2d.cpp  point2d.h
point2d_base/: CMakeLists.txt  point2d_base.cpp  point2d_base.h
polyset/: CMakeLists.txt  polyset.cpp
render/: CMakeLists.txt  GUIObserver.h  render.cpp  render.h
render/GUIObserver/: GUIObserver.h
render/renderLib/: CMakeLists.txt  render.cpp  render.h
render/renderLib/AngemEntity/: AngemEntity.h
render/renderLib/ProjectionPlane/: ProjectionPlane.cpp  ProjectionPlane.h
render/renderLib/TwoDObject/: TwoDLine.cpp  TwoDLine.h  TwoDObject.h  TwoDPoint.cpp  TwoDPoint.h
render/renderTest/: test.cpp
src/: angem.cpp  utility.cpp
test/: CMakeLists.txt  testAngem.cpp  testController.cpp  testProjection.cpp  testRender.cpp
utility/: CMakeLists.txt
utils/: CMakeLists.txt
vec2/: CMakeLists.txt  vec2.h
vec3/: CMakeLists.txt  vec3.cpp
