cmake_minimum_required(VERSION 3.0.0)
project(Algo)

set(ALGO_LIBRARIES)
set(ALGO_INCLUDE_DIRS)

file(GLOB SOURCES *.cpp)
file(GLOB INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})

add_library(Algo STATIC ${SOURCES})

set(ALGO_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)
set(ALGO_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)

target_include_directories(${PROJECT_NAME} PUBLIC ${ENTITY_INCLUDE_DIRS} ${TWO_D_ENTITY_STORAGE_DIRS})
target_link_libraries(${PROJECT_NAME} PUBLIC ${ENTITY_LIBRARIES} ${TWO_D_ENTITY_LIBRARIES})