cmake_minimum_required(VERSION 3.0.0)
project(Algo)

set(ALGO_LIBRARIES)
set(ALGO_INCLUDE_DIRS)

file(GLOB SOURCES Algo.cpp)
file(GLOB INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})

add_library(Algo STATIC Algo.cpp)

set(ALGO_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)
set(ALGO_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)

target_include_directories(${PROJECT_NAME} PUBLIC ${ENTITY_INCLUDE_DIRS} ${RENDER_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME} PUBLIC ${ENTITY_LIBRARIES} ${RENDER_LIBRARIES})