cmake_minimum_required(VERSION 3.0.0)
project(AngemWorkers)

#set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-fprofile-arcs -ftest-coverage -fPIC -O0")
#SET(CMAKE_EXE_LINKER_FLAGS  ${CMAKE_EXE_LINKER_FLAGS} "-lgcov")

file(GLOB SOURCES *.cpp)
file(GLOB INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})

add_library(${PROJECT_NAME} STATIC ${SOURCES})

set(ANGEM_WORKERS_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)
set(ANGEM_WORKERS_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)

target_include_directories(${PROJECT_NAME} PUBLIC ${ENTITY_INCLUDE_DIRS} ${ANGEM_INCLUDE_DIRS} ${RENDER_INCLUDE_DIRS} ${UTILS_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME} PUBLIC ${ENTITY_LIBRARIES} ${ANGEM_LIBRARIES} ${RENDER_LIBRARIES} ${UTILS_LIBRARIES})
