cmake_minimum_required(VERSION 3.0.0)
project(Entity)
set(THIS_LIB_NAME Entity)

file(GLOB SOURCES *.cpp)
file(GLOB INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})

add_library(${THIS_LIB_NAME}  STATIC ${SOURCES})

set(ENTITY_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)
set(ENTITY_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)

#SET(CMAKE_CXX_FLAGS  ${CMAKE_CXX_FLAGS} "-fprofile-arcs -ftest-coverage -fPIC -O0")
#SET(CMAKE_EXE_LINKER_FLAGS  ${CMAKE_EXE_LINKER_FLAGS} "-lgcov")
#SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-std=c++11")

target_include_directories(${THIS_LIB_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${UTILS_INCLUDE_DIRS} ${ANGEM_INCLUDE_DIRS} ${TWO_D_ENTITY_INCLUDE_DIRS} ${RENDERABLE_ENTITY_INCLUDE_DIRS})
target_link_libraries(${THIS_LIB_NAME} LINK_PUBLIC Utils Angem RenderableEntity)
