cmake_minimum_required(VERSION 3.0.0)
project(TwoDEntity)

set(TWO_D_ENTITY_LIBRARIES)
set(TWO_D_ENTITY_INCLUDE_DIRS)

file(GLOB SOURCES *.cpp)
file(GLOB INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})

add_library(${PROJECT_NAME} STATIC ${SOURCES})

set(TWO_D_ENTITY_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)
set(TWO_D_ENTITY_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)