cmake_minimum_required(VERSION 3.0.0)
project(Utils)

set(UTILS_LIBRARIES)
set(UTILS_INCLUDE_DIRS)

file(GLOB SOURCES *.cpp)
file(GLOB INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})

add_library(Utils STATIC ${SOURCES})

set(UTILS_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)
set(UTILS_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)

target_include_directories(${PROJECT_NAME} PUBLIC ${ENTITY_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME} PUBLIC ${ENTITY_LIBRARIES})