cmake_minimum_required(VERSION 3.19)
project(Render)

set(RENDER_LIBRARIES)
set(RENDER_INCLUDE_DIRS)

file(GLOB SOURCES *.cpp)
file(GLOB INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})

add_library(RENDER STATIC ${SOURCES})

set(RENDER_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)
set(RENDER_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)

