cmake_minimum_required(VERSION 3.18)
project(Render)

set(RENDER_LIBRARIES)
set(RENDER_INCLUDE_DIRS)

file(GLOB SOURCES *.cpp)
file(GLOB INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})

add_library(Render STATIC ${SOURCES})

set(RENDER_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)
set(RENDER_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)

target_include_directories(${PROJECT_NAME} PUBLIC ${TWO_D_ENTITY_INCLUDE_DIRS} ${ENTITY_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME} PUBLIC ${TWO_D_ENTITY_LIBRARIES} ${ENTITY_LIBRARIES})