cmake_minimum_required(VERSION 3.0.0)
project(Render)

set(RENDER_LIBRARIES)
set(RENDER_INCLUDE_DIRS)

file(GLOB SOURCES *.cpp)
file(GLOB INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})

add_library(Render STATIC ${SOURCES})

set(RENDER_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)
set(RENDER_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)

target_include_directories(${PROJECT_NAME} PUBLIC ${ENTITY_INCLUDE_DIRS} ${RENDERABLE_ENTITY_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME} PUBLIC ${ENTITY_LIBRARIES} ${RENDERABLE_ENTITY_LIBRARIES})